--- a/app/src/main/res/layout/fragment_week1.xml
+++ b/app/src/main/res/layout/fragment_week1.xml
@@ -32,5 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:layoutAnimation="@anim/layout_animation_fall_down" />
 </RelativeLayout>
