--- a/app/src/main/res/layout/schedule_card_item.xml
+++ b/app/src/main/res/layout/schedule_card_item.xml
@@ -14,7 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="@+id/room"
-        app:layout_constraintTop_toBottomOf="@+id/room">
+        app:layout_constraintTop_toBottomOf="@+id/room"
+        android:focusable="true"
+        android:clickable="true"
+        android:hapticFeedbackEnabled="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <TextView
             android:id="@+id/lesson_number"
@@ -22,12 +26,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginEnd="64dp"
-            android:layout_marginRight="64dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:text="lesson_number"
+            android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/subgroup"
+            app:layout_constraintEnd_toEndOf="@+id/subgroup"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
@@ -35,9 +41,8 @@
             android:id="@+id/subgroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/lesson_number"
             android:layout_toRightOf="@+id/lesson_number"
-
-            app:layout_constraintStart_toEndOf="@id/lesson_number"
             android:text="subgroup"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBaseline_toBaselineOf="@+id/lesson_number"
