--- a/app/src/main/res/menu/menu_main2.xml
+++ b/app/src/main/res/menu/menu_main2.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.knu.krasn.knuscheduler.ScheduleActivity">
     <item
-        android:id="@+id/change_group"
+        android:id="@+id/settings"
         android:orderInCategory="100"
-        android:title="Змінити групу"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_settings"
+        android:title="Налаштування"
+        app:showAsAction="always" />
 </menu>
