--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -4,17 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:subtitleTextColor="@color/colorWhite"
-        app:titleTextColor="@color/colorWhite">
-
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/toolbar_layout" />
 
 
     <android.support.v4.view.ViewPager
@@ -23,7 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:layout_above="@+id/tabs">
-
     </android.support.v4.view.ViewPager>
 
     <android.support.design.widget.TabLayout
@@ -32,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:tabGravity="fill"
+        android:rotationX="180"
         app:tabMode="fixed"
         app:tabSelectedTextColor="@color/colorPrimaryDark"
         app:tabTextColor="@color/colorSecondaryDark"
