--- a/app/src/main/res/menu/menu_main2.xml
+++ b/app/src/main/res/menu/menu_main2.xml
@@ -1,11 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.knu.krasn.knuscheduler.ScheduleActivity">
+    tools:context="com.knu.krasn.knuscheduler.Activities.ScheduleActivity">
     <item
         android:id="@+id/settings"
         android:orderInCategory="100"
         android:icon="@drawable/ic_settings"
-        android:title="Налаштування"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:title="" />
+    <item
+        android:id="@+id/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:icon="@android:drawable/ic_menu_search"
+        app:showAsAction="ifRoom"
+        android:title="Пошук" />
+
 </menu>
