Added new functionality, started MVP pattern implementation. Big update

--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="?attr/actionBarSize"
     app:layout_scrollFlags="scroll|enterAlways"
     android:background="@color/colorPrimaryDark"
-    app:titleTextColor="@color/colorWhite">
+    app:titleTextColor="@color/colorWhite"
+    style="@style/AppTheme.Toolbar">
 
 </android.support.v7.widget.Toolbar>
