--- a/app/src/main/res/layout/schedule_card_item.xml
+++ b/app/src/main/res/layout/schedule_card_item.xml
@@ -8,104 +8,100 @@
     android:elevation="3dp"
     app:cardBackgroundColor="@color/colorWhite"
     app:cardCornerRadius="5dp"
-    app:contentPadding="5dp">
+    app:contentPadding="5dp"
+    android:background="@drawable/ripple"
+
+    android:foreground="?android:attr/selectableItemBackground"
+
+    >
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="@+id/room"
-        app:layout_constraintTop_toBottomOf="@+id/room"
-        android:focusable="true"
         android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:hapticFeedbackEnabled="true"
-        android:foreground="?android:attr/selectableItemBackground">
+        app:layout_constraintBottom_toBottomOf="@+id/room"
+        app:layout_constraintTop_toBottomOf="@+id/room">
 
         <TextView
             android:id="@+id/lesson_number"
-            android:layout_width="97dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:text="lesson_number"
+            android:text="text"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/subgroup"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:id="@+id/subgroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
             android:layout_toEndOf="@+id/lesson_number"
-            android:layout_toRightOf="@+id/lesson_number"
             android:text="subgroup"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBaseline_toBaselineOf="@+id/lesson_number"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-        <TextView
-            android:id="@+id/time_of_lesson"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:text="time"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintBaseline_toBaselineOf="@+id/lesson_number"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_toRightOf="@+id/lesson_number" />
 
         <TextView
             android:id="@+id/room"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginStart="3dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:text="room"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/lesson_type" />
 
         <TextView
             android:id="@+id/teacher"
-            android:layout_width="0dp"
-            android:layout_height="18dp"
+            android:layout_width="wrap_content"
+
+            android:layout_height="17dp"
             android:layout_margin="5dp"
 
-            android:layout_marginRight="4dp"
-            android:layout_marginEnd="4dp"
-
+            android:layout_marginRight="16dp"
             android:layout_weight="1"
             android:text="teacher"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintBaseline_toBaselineOf="@+id/lesson_type"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/room"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/room" />
 
         <TextView
             android:id="@+id/lesson_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginLeft="3dp"
+            android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:text="Lesson_type"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/room" />
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lesson_number" />
 
         <TextView
             android:id="@+id/lesson"
@@ -113,12 +109,13 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_margin="5dp"
+            android:layout_marginTop="8dp"
             android:text="lesson"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lesson_type" />
+            app:layout_constraintTop_toBottomOf="@+id/room" />
 
     </android.support.constraint.ConstraintLayout>
 
