--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,6 +14,9 @@
         <item name="autoCompleteTextViewStyle">@style/cursorColor</item>
     </style>
 
+    <style name="AppTheme.Toolbar" parent="android:Theme.Holo.Light.DarkActionBar">
+
+    </style>
     <style name="AppTheme.withActionBar" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorControlActivated">@color/colorPrimaryDark</item>
         <item name="colorControlNormal">@color/colorSecondaryDark</item>
