--- a/app/src/main/res/layout-v21/card_item.xml
+++ b/app/src/main/res/layout-v21/card_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/day_card"
+    android:id="@+id/group_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/card_margin"
+    android:background="@drawable/ripple"
     android:clickable="true"
-    android:elevation="3dp"
+    android:elevation="5dp"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     app:cardBackgroundColor="@color/colorWhite"
-    app:cardCornerRadius="5dp"
-    >
+    app:cardCornerRadius="5dp">
+
     <TextView
-        android:id="@+id/day_of_week"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
