--- a/app/src/main/res/layout/fragment_week1.xml
+++ b/app/src/main/res/layout/fragment_week1.xml
@@ -32,6 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:scrollbars="vertical"
-        android:layoutAnimation="@anim/layout_animation_fall_down" />
+        android:layoutAnimation="@anim/layout_animation_fall_down"
+        android:scrollbars="vertical" />
 </RelativeLayout>
