--- a/app/src/main/res/layout/schedule_card_item.xml
+++ b/app/src/main/res/layout/schedule_card_item.xml
@@ -9,9 +9,7 @@
     app:cardBackgroundColor="@color/colorWhite"
     app:cardCornerRadius="5dp"
     app:contentPadding="5dp"
-    android:background="@drawable/ripple"
 
-    android:foreground="?android:attr/selectableItemBackground"
 
     >
 
@@ -31,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="text"
             android:textAlignment="center"
@@ -39,8 +38,7 @@
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="8dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/subgroup"
@@ -49,20 +47,20 @@
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_toEndOf="@+id/lesson_number"
+            android:layout_toRightOf="@+id/lesson_number"
             android:text="subgroup"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBaseline_toBaselineOf="@+id/lesson_number"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_toRightOf="@+id/lesson_number" />
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/room"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
             android:text="room"
