--- a/app/src/main/res/layout/activity_schedule_search.xml
+++ b/app/src/main/res/layout/activity_schedule_search.xml
@@ -27,6 +27,14 @@
         android:gravity="center"
         android:visibility="invisible">
 
+        <TextView
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/no_data_available"
+            android:visibility="gone" />
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
