--- a/app/src/main/res/layout/fragment_week2.xml
+++ b/app/src/main/res/layout/fragment_week2.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
-    tools:context="com.knu.krasn.knuscheduler.View.Fragments.Week2Fragment">
+    tools:context="com.knu.krasn.knuscheduler.View.Fragments.Week2WeekFragment">
 
   <RelativeLayout
       android:id="@+id/wheel2"
@@ -27,11 +27,18 @@
         android:visibility="visible" />
   </RelativeLayout>
 
+  <TextView
+      android:id="@+id/empty_view"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:gravity="center"
+      android:text="@string/no_data_available"
+      android:visibility="gone" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:scrollbars="vertical"
-        android:layoutAnimation="@anim/layout_animation_fall_down" />
+        android:layoutAnimation="@anim/layout_animation_fall_down"
+        android:scrollbars="vertical" />
 </RelativeLayout>
