--- a/app/src/main/res/layout/activity_schedule_search.xml
+++ b/app/src/main/res/layout/activity_schedule_search.xml
@@ -27,13 +27,7 @@
         android:gravity="center"
         android:visibility="invisible">
 
-        <TextView
-            android:id="@+id/empty_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/no_data_available"
-            android:visibility="gone" />
+
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -48,4 +42,15 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:drawableEnd="@drawable/ic_no_pair"
+        android:drawableRight="@drawable/ic_no_pair"
+        android:gravity="center"
+        android:text="@string/no_data_available"
+        android:textColor="@color/colorPrimaryDark"
+        android:visibility="gone" />
 </RelativeLayout>
