--- a/app/src/main/res/layout/fragment_week2.xml
+++ b/app/src/main/res/layout/fragment_week2.xml
@@ -29,11 +29,16 @@
 
   <TextView
       android:id="@+id/empty_view"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:drawableEnd="@drawable/ic_no_pair"
+      android:drawableRight="@drawable/ic_no_pair"
       android:gravity="center"
       android:text="@string/no_data_available"
+      android:textColor="@color/colorPrimaryDark"
       android:visibility="gone" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
