--- a/app/src/main/res/layout/schedule_card_item.xml
+++ b/app/src/main/res/layout/schedule_card_item.xml
@@ -10,7 +10,6 @@
     app:cardCornerRadius="5dp"
     app:contentPadding="5dp"
 
-
     >
 
     <android.support.constraint.ConstraintLayout
@@ -48,7 +47,9 @@
             android:layout_marginRight="4dp"
             android:layout_toEndOf="@+id/lesson_number"
             android:layout_toRightOf="@+id/lesson_number"
+            android:gravity="end"
             android:text="subgroup"
+            android:textAlignment="viewEnd"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBaseline_toBaselineOf="@+id/lesson_number"
             app:layout_constraintEnd_toEndOf="parent"
@@ -59,12 +60,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginLeft="4dp"
-            android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
+            android:gravity="start"
             android:text="room"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lesson_type" />
@@ -72,20 +72,22 @@
         <TextView
             android:id="@+id/teacher"
             android:layout_width="wrap_content"
-
-            android:layout_height="17dp"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
-
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_weight="1"
-            android:text="teacher"
-            android:textAlignment="center"
+            android:gravity="end"
+            android:maxLines="2"
+            android:text="teachers"
+            android:textAlignment="viewEnd"
             android:textColor="@color/colorPrimaryDark"
-            app:layout_constraintBaseline_toBaselineOf="@+id/room"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.988"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/room" />
+            app:layout_constraintStart_toEndOf="@+id/room"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/lesson_type"
@@ -114,6 +116,24 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/room" />
+
+        <TextView
+            android:id="@+id/searchData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:gravity="start"
+            android:text="TextView"
+            android:textAlignment="viewStart"
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toTopOf="@+id/room"
+            app:layout_constraintEnd_toStartOf="@+id/lesson_number"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 
