--- a/app/src/main/res/layout/group_fragment.xml
+++ b/app/src/main/res/layout/group_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/primary">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -39,9 +40,13 @@
 
     <android.support.v7.widget.SearchView
         android:id="@+id/search_view"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
         style="@style/SearchViewStyle"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:layout_margin="6dp"
+        android:background="@drawable/search_background"
+        android:padding="8dp"
+        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
