--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,30 +5,36 @@
 
         <!-- Customize your theme here. -->
         <item name="android:colorControlActivated">@color/colorPrimaryDark</item>
-        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+        <item name="colorPrimary">@color/colorPrimaryDark</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <!--<item name="colorAccent">@color/colorAccent</item>-->
+        <item name="colorAccent">@color/colorPrimaryDark</item>
         <item name="android:textColorSecondary">@color/colorWhite</item>
         <item name="android:text">@color/colorSecondaryDark</item>
         <item name="android:title">@color/colorSecondaryDark</item>
-        <item name="autoCompleteTextViewStyle">@style/cursorColor</item>
     </style>
 
-    <style name="AppTheme.Toolbar" parent="android:Theme.Holo.Light.DarkActionBar">
+    <!--<style name="AppTheme.withActionBar" parent="Theme.AppCompat.DayNight.DarkActionBar">-->
+    <!--<item name="colorControlActivated">@color/colorPrimaryDark</item>-->
+    <!--<item name="colorControlNormal">@color/colorSecondaryDark</item>-->
+    <!--</style>-->
 
-    </style>
-    <style name="AppTheme.withActionBar" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <item name="colorControlActivated">@color/colorPrimaryDark</item>
-        <item name="colorControlNormal">@color/colorSecondaryDark</item>
-    </style>
-
-    <style name="cursorColor" parent="Widget.AppCompat.AutoCompleteTextView">
-        <item name="android:textCursorDrawable">@drawable/cursor</item>
-    </style>
+    <!--<style name="cursorColor" parent="Widget.AppCompat.AutoCompleteTextView">-->
+    <!--<item name="android:textCursorDrawable">@drawable/cursor</item>-->
+    <!--</style>-->
 
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash</item>
 
     </style>
+
+    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <item name="searchIcon">@drawable/ic_search_black_24dp</item>
+        <item name="closeIcon">@drawable/ic_close_black_24dp</item>
+        <item name="android:textColorHint">@color/colorPrimaryDark</item>
+        <item name="android:background">@drawable/search_background</item>
+        <item name="queryHint">@string/search_group_hint</item>
+    </style>
+
+    <string name="search_group_hint">Пошук групи</string>
 
 </resources>
