--- a/app/src/main/res/menu/menu_main2.xml
+++ b/app/src/main/res/menu/menu_main2.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.knu.krasn.knuscheduler.View.Activities.ScheduleActivity">
+    tools:context="com.owl.krasn.KNUSchedule.View.Activities.ScheduleActivity">
     <item
         android:id="@+id/settings"
         android:orderInCategory="100"
