--- a/app/src/main/res/layout/week_fragment.xml
+++ b/app/src/main/res/layout/week_fragment.xml
@@ -6,16 +6,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="match_parent"
+        android:id="@+id/week1"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:lesson_number="23"
-        app:title="GY" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <geek.owl.com.ua.KNUSchedule.Util.WeekView
+        android:id="@+id/week2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/week1" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refresh_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
