--- a/app/src/main/res/layout/week_item.xml
+++ b/app/src/main/res/layout/week_item.xml
@@ -3,33 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".View.Activity.MainActivity">
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/week2_adapter_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="281dp" />
-
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/textView"
@@ -40,43 +15,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="67dp" />
-
-    <geek.owl.com.ua.KNUSchedule.Util.WeekView
-        android:id="@+id/day"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:lesson_number="23"
-        app:title="ПН"
-        android:elevation="3dp"/>
 </android.support.constraint.ConstraintLayout>
