--- a/app/src/main/res/layout/week_fragment.xml
+++ b/app/src/main/res/layout/week_fragment.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  xmlns:android="http://schemas.android.com/apk/res/android" >
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
@@ -17,10 +21,11 @@
     app:layout_constraintBottom_toTopOf="@+id/week1"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
+
   <GridLayout
     android:id="@+id/week1"
     android:layout_width="0dp"
-    android:layout_height="342dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="36dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHeight_percent="0.5"
@@ -31,9 +36,11 @@
   <GridLayout
     android:id="@+id/week2"
     android:layout_width="0dp"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="32dp"
 
+    android:layout_marginBottom="8dp"
+    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHeight_percent="0.5"
     app:layout_constraintStart_toStartOf="parent"
@@ -61,10 +68,11 @@
     android:layout_marginEnd="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="12dp"
-    android:text="@string/week1_adapter_name"
+    android:text="@string/week2_adapter_name"
     app:layout_constraintBottom_toTopOf="@+id/week2"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/week1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
