--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
-
-  android:background="@color/transparent"
+  android:id="@+id/day_main_layout"
+  android:background="@drawable/day_background_inactive"
   android:elevation="5dp"
   app:cardCornerRadius="10dp"
   app:layout_constraintBottom_toBottomOf="parent"
@@ -17,46 +17,48 @@
   app:layout_constraintTop_toTopOf="parent"
   app:layout_constraintVertical_bias="0.0">
 
-  <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/transparent">
 
-    <ImageView
-      android:id="@+id/background"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:focusable="true"
-      android:scaleType="fitXY"
-      android:src="@drawable/day_background" />
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="100dp"
+    android:layout_height="wrap_content"
+    >
 
     <TextView
       android:id="@+id/num_of_lessons"
       android:layout_width="wrap_content"
 
       android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginTop="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginRight="8dp"
       android:layout_marginBottom="8dp"
       android:text=""
       android:textAlignment="center"
       android:textColor="@color/colorPrimaryDark"
       android:textStyle="bold"
-      app:layout_constraintBottom_toBottomOf="@+id/background"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent" />
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/day_of_week"
+      app:layout_constraintVertical_bias="0.0" />
 
     <TextView
       android:id="@+id/day_of_week"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="85dp"
+      android:layout_height="69dp"
+      android:layout_marginTop="8dp"
+      android:background="@drawable/text_view_background_active"
+      android:gravity="center"
       android:text="ПН"
       android:textColor="@color/colorWhite"
       android:textSize="32sp"
       android:textStyle="bold"
-      app:layout_constraintBottom_toTopOf="@+id/num_of_lessons"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.509"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_chainStyle="spread_inside" />
+      app:layout_constraintTop_toTopOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</FrameLayout>
