--- a/app/src/main/res/layout/group_fragment.xml
+++ b/app/src/main/res/layout/group_fragment.xml
@@ -7,7 +7,7 @@
   android:background="@color/primary">
 
   <androidx.appcompat.widget.Toolbar
-    android:id="@+id/toolbar"
+    android:id="@+id/day_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
@@ -49,6 +49,6 @@
     android:outlineAmbientShadowColor="@color/colorPrimaryDark"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+    app:layout_constraintTop_toBottomOf="@+id/day_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
