--- a/app/src/main/res/layout/week_fragment.xml
+++ b/app/src/main/res/layout/week_fragment.xml
@@ -6,7 +6,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <androidx.appcompat.widget.Toolbar
-    android:id="@+id/toolbar"
+    android:id="@+id/day_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
@@ -26,7 +26,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/toolbar">
+    app:layout_constraintTop_toBottomOf="@+id/day_toolbar">
 
     <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
