--- a/app/src/main/res/layout/group_fragment.xml
+++ b/app/src/main/res/layout/group_fragment.xml
@@ -6,6 +6,17 @@
   android:layout_height="match_parent"
   android:background="@color/primary">
 
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/recycler_view"
+      android:layout_width="match_parent"
+
+      android:layout_height="0dp"
+      android:layout_marginTop="8dp"
+      app:layout_constraintTop_toBottomOf="@+id/search_view"
+      tools:listitem="@layout/faculty_item">
+
+  </androidx.recyclerview.widget.RecyclerView>
+
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/day_toolbar"
     android:layout_width="match_parent"
@@ -17,26 +28,6 @@
     app:subtitle="@string/choose_group"
     app:title="@string/app_name"
     app:titleTextColor="@color/colorWhite" />
-
-  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:id="@+id/swipeRefreshLayout"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:layout_marginTop="8dp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/search_view">
-
-    <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recycler_view"
-      android:layout_width="match_parent"
-
-      android:layout_height="0dp"
-      tools:listitem="@layout/faculty_item">
-
-    </androidx.recyclerview.widget.RecyclerView>
-  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
   <androidx.appcompat.widget.SearchView
     android:id="@+id/search_view"
