--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -42,6 +42,12 @@
     <argument
       android:name="facultyId"
       app:argType="long" />
+    <action
+        android:id="@+id/action_weekFragment_to_settingsFragment"
+        app:destination="@id/settingsFragment" />
+      <action
+          android:id="@+id/action_weekFragment_to_searchFragment"
+          app:destination="@id/searchFragment" />
   </fragment>
   <fragment
     android:id="@+id/dayFragment"
@@ -63,4 +69,18 @@
       app:argType="integer"
       android:defaultValue="-1" />
   </fragment>
+  <fragment
+      android:id="@+id/settingsFragment"
+      android:name="geek.owl.com.ua.KNUSchedule.View.Fragment.SettingsFragment"
+      android:label="SettingsFragment" >
+    <action
+        android:id="@+id/action_settingsFragment_to_facultyFragment"
+        app:destination="@id/facultyFragment"
+        app:popUpTo="@+id/settingsFragment"
+        app:popUpToInclusive="true" />
+  </fragment>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="geek.owl.com.ua.KNUSchedule.View.Fragment.SearchFragment"
+        android:label="SearchFragment" />
 </navigation>
