--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,17 +10,16 @@
     <item name="colorAccent">@color/colorPrimaryDark</item>
     <item name="android:textColorSecondary">@color/colorWhite</item>
     <item name="android:text">@color/colorSecondaryDark</item>
-    <item name="android:title">@color/colorSecondaryDark</item>
   </style>
 
-  <!--<style name="AppTheme.withActionBar" parent="Theme.AppCompat.DayNight.DarkActionBar">-->
-  <!--<item name="colorControlActivated">@color/colorPrimaryDark</item>-->
-  <!--<item name="colorControlNormal">@color/colorSecondaryDark</item>-->
-  <!--</style>-->
 
-  <!--<style name="cursorColor" parent="Widget.AppCompat.AutoCompleteTextView">-->
-  <!--<item name="android:textCursorDrawable">@drawable/cursor</item>-->
-  <!--</style>-->
+
+  <style name="SwitchTheme">
+    <item name="android:colorAccent">@color/colorPrimaryDark</item>
+    <item name="thumbTint">@color/switch_thumb_color_selector</item>
+    <item name="trackTint">@color/switch_track_color_selector</item>
+  </style>
+
 
   <style name="SplashTheme" parent="AppTheme">
     <item name="android:windowBackground">@drawable/splash</item>
